cabal-version:      3.0
name:               privateDepDemoLib
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Seungheon Oh
maintainer:         seungheon.ooh@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010